# natije

./: manage.py  pyproject.toml
api/: urls.py
api/courses/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/courses/migrations/: 0001_initial.py  0002_alter_lesson_duration.py  0003_alter_course_name_alter_coursetheme_title_and_more.py  0004_course_bought_user.py  0005_remove_coursetheme_is_prime.py  0006_alter_course_bought_user_alter_course_user.py  0007_alter_course_bought_user.py  0008_remove_course_bought_user_boughtcourse_and_more.py
api/quizzes/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/tg_shop_bot/: helpers.py
api/tg_shop_bot/management/commands/: bot.py
api/tg_shop_bot/management/commands/routers/: __init__.py  router_start.py  utils.py
api/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/users/management/commands/: create_admin_user.py  create_roles.py
api/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_remove_user_is_staff_alter_user_groups_and_more.py  0004_alter_user_email.py  0005_alter_user_groups_alter_user_user_permissions.py  0006_alter_user_managers_remove_user_profile_picture_and_more.py  0007_alter_profile_profile_picture.py
natije/: asgi.py  settings.py  urls.py  wsgi.py
